[package]
name = "cfddns"
description = "Cloudflare based dynamic DNS tool"
version = "0.1.0"
edition = "2021"
authors = ["Rayhan Nabi <me@rayhannabi.com>"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
